# mcp-server

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  server.py
.claude/: settings.local.json
.cursor/rules/: python.mdc
servers/: __init__.py
